minor changes to make same as PR to 9.4
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>